istio/nlb-https-example/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echo-server
  namespace: default
spec:
  hosts:
    - echo-server.choilab.xyz
  gateways:
    - istio-system/default-gateway
  http:
    - route:
        - destination:
            host: echo-server
            port:
              number: 80
